test/negative/parse_unclosed_bracket.mut
# Negative: missing closing bracket in list type
nums: List[i64 = List[i64]()
